update Setup